--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -145,6 +145,16 @@
 					<key>Replace</key>
 					<data>SUdQVQhfQURSDAAAAgA=</data>
 				</dict>
+                <dict>
+                    <key>Comment</key>
+                    <string>Acpi Patch</string>
+                    <key>Disabled</key>
+                    <false/>
+                    <key>Find</key>
+                    <data>oAqTU1RBUwE=</data>
+                    <key>Replace</key>
+                    <data>oAqRCv8L//8=</data>
+                </dict>
 			</array>
 		</dict>
 		<key>DropTables</key>
