For UHD620 in a Comet Lake CPU requires: device-id=9B3E0000 and AAPL,ig-platform-id=00009B3E

--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -118,13 +118,13 @@
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
 				<key>AAPL,ig-platform-id</key>
-				<data>AAAWWQ==</data>
+				<data>AACbPg==</data>
 				<key>AAPL,slot-name</key>
 				<string>Internal</string>
 				<key>complete-modeset-framebuffers</key>
 				<data>AAAAAAAAAAE=</data>
 				<key>device-id</key>
-				<data>FlkAAA==</data>
+				<data>mz4AAA==</data>
 				<key>framebuffer-con1-enable</key>
 				<data>AQAAAA==</data>
 				<key>framebuffer-con1-pipe</key>
